# AnomalyDetectionCpp

./: .gitignore  CMakeLists.txt  README.md  example.csv  main.cpp
data/: example_2.csv
src/: CMakeLists.txt  detectanomalies.cpp  detectanomalies.h  io.cpp  io.h  main.cpp  statistics.cpp  statistics.h
